--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "version": "6.2.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.7.3",
         "@date-io/core": "1.3.13",
         "@date-io/date-fns": "1.3.13",
+        "@hookform/resolvers": "^2.9.10",
         "@material-ui/core": "4.12.3",
         "@material-ui/pickers": "3.3.10",
         "@reduxjs/toolkit": "1.6.1",
@@ -19,6 +21,7 @@
         "firebase": "8.9.1",
         "formsy-react": "2.2.5",
         "framer-motion": "4.1.17",
+        "graphql": "15.8.0",
         "history": "4.10.1",
         "i18next": "20.4.0",
         "jss": "10.6.0",
@@ -53,7 +56,8 @@
         "typeface-poppins": "1.1.13",
         "velocity-animate": "1.5.2",
         "velocity-react": "1.4.3",
-        "web-vitals": "2.1.0"
+        "web-vitals": "2.1.0",
+        "yup": "^0.32.11"
     },
     "peerDependencies": {
         "autoprefixer": "9.8.6",
