--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "@material-ui/core": "4.12.3",
         "@material-ui/pickers": "3.3.10",
         "@reduxjs/toolkit": "1.6.1",
+        "apexcharts": "3.27.3",
         "auth0-lock": "11.30.4",
         "autosuggest-highlight": "3.1.1",
         "axios": "0.21.1",
+        "axios-mock-adapter": "1.19.0",
         "chart.js": "2.9.4",
         "clsx": "1.1.1",
         "date-fns": "2.23.0",
@@ -37,6 +39,7 @@
         "prop-types": "15.7.2",
         "qs": "6.10.1",
         "react": "17.0.2",
+        "react-apexcharts": "1.3.9",
         "react-autosuggest": "10.1.0",
         "react-chartjs-2": "2.11.2",
         "react-dom": "17.0.2",
@@ -108,7 +111,6 @@
         "pnpify-sdk": "yarn pnpify --sdk",
         "lint": "eslint"
     },
-    "proxy": "https://backend.tradeep.ai/",
     "browserslist": {
         "production": [
             ">0.2%",
