--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@date-io/date-fns": "1.3.13",
         "@hookform/resolvers": "^2.9.10",
         "@material-ui/core": "4.12.3",
+        "@material-ui/icons": "^4.11.3",
         "@material-ui/pickers": "3.3.10",
         "@reduxjs/toolkit": "1.6.1",
         "apexcharts": "3.27.3",
@@ -31,6 +32,7 @@
         "jss-rtl": "0.3.0",
         "jwt-decode": "2.2.0",
         "lodash": "4.17.21",
+        "material-table": "1.69.3",
         "mobile-detect": "1.4.5",
         "moment": "2.29.1",
         "notistack": "1.0.10",
