--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
         "prismjs": "1.24.1",
         "prop-types": "15.7.2",
         "qs": "6.10.1",
-        "react": "17.0.2",
+        "react": "^17.0.2",
         "react-apexcharts": "1.3.9",
         "react-autosuggest": "10.1.0",
         "react-chartjs-2": "2.11.2",
-        "react-dom": "17.0.2",
+        "react-dom": "^17.0.2",
         "react-draft-wysiwyg": "1.14.7",
         "react-frame-component": "4.1.3",
         "react-hook-form": "7.12.2",
@@ -66,9 +66,7 @@
     },
     "peerDependencies": {
         "autoprefixer": "9.8.6",
-        "postcss": "7.0.36",
-        "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "postcss": "7.0.36"
     },
     "resolutions": {
         "react": "17.0.2",
