--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-apexcharts": "1.3.9",
         "react-autosuggest": "10.1.0",
         "react-chartjs-2": "2.11.2",
+        "react-data-table-component": "^7.5.3",
         "react-dom": "^17.0.2",
         "react-draft-wysiwyg": "1.14.7",
         "react-frame-component": "4.1.3",
@@ -58,6 +59,7 @@
         "react-select": "3.2.0",
         "react-swipeable": "6.1.2",
         "redux-logger": "4.0.0",
+        "styled-components": "^5.3.6",
         "typeface-poppins": "1.1.13",
         "velocity-animate": "1.5.2",
         "velocity-react": "1.4.3",
