--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
         "@apollo/client": "^3.7.3",
         "@date-io/core": "1.3.13",
         "@date-io/date-fns": "1.3.13",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@hookform/resolvers": "^2.9.10",
         "@material-ui/core": "4.12.3",
         "@material-ui/icons": "^4.11.3",
         "@material-ui/pickers": "3.3.10",
+        "@mui/lab": "^5.0.0-alpha.120",
+        "@mui/material": "^5.11.10",
         "@reduxjs/toolkit": "1.6.1",
         "apexcharts": "3.27.3",
         "auth0-lock": "11.30.4",
@@ -33,6 +37,7 @@
         "jwt-decode": "2.2.0",
         "lodash": "4.17.21",
         "material-table": "1.69.3",
+        "material-ui-rating": "^4.0.0-beta.2",
         "mobile-detect": "1.4.5",
         "moment": "2.29.1",
         "notistack": "1.0.10",
