--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "date-fns": "2.23.0",
         "draft-js": "0.11.7",
         "draftjs-to-html": "0.9.1",
+        "drawflow": "^0.0.59",
         "firebase": "8.9.1",
         "formsy-react": "2.2.5",
         "framer-motion": "4.1.17",
@@ -52,6 +53,7 @@
         "react-data-table-component": "^7.5.3",
         "react-dom": "^17.0.2",
         "react-draft-wysiwyg": "1.14.7",
+        "react-flow": "^1.0.3",
         "react-frame-component": "4.1.3",
         "react-hook-form": "7.12.2",
         "react-i18next": "11.11.4",
@@ -64,6 +66,7 @@
         "react-scripts": "4.0.3",
         "react-select": "3.2.0",
         "react-swipeable": "6.1.2",
+        "reactflow": "^11.7.0",
         "redux-logger": "4.0.0",
         "styled-components": "^5.3.6",
         "typeface-poppins": "1.1.13",
