--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-hook-form": "7.12.2",
         "react-i18next": "11.11.4",
         "react-icons": "^4.7.1",
+        "react-notifications": "^1.7.4",
         "react-popper": "1.3.11",
         "react-redux": "7.2.4",
         "react-router": "5.2.0",
